--- a/public.html
+++ b/public.html
@@ -8,7 +8,7 @@
 <div class="nav">
     <div class="switch-theme" onclick="switchTheme()">💡</div>
     <div class="search">🔍</div>
-    <a href="https://penyoofficial.github.io/blog/">Penyo 博客</a>
+    <a id="title" href="https://penyoofficial.github.io/blog/">Penyo 博客</a>
 </div>
 <div class="main-contain">
     <!-- 这里插入一个或多个文章结构 -->
