--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link id="theme" rel="stylesheet" href="light-theme.css">
     <link rel="subresource" href="light-theme.css">
     <link rel="subresource" href="dark-theme.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.3/jquery.js"></script>
     <script src="global.js"></script>
 </head>
 
