--- a/article.html
+++ b/article.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html pagetype="pv" lang="zh">
+<html pagetype="body" lang="zh">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
-    <title>Penyo 博客 | Penyo Blog</title>
+    <title id="page-title">Penyo 博客 | Penyo Blog</title>
     <link rel="stylesheet" href="./assets/light-theme.css">
     <link rel="stylesheet" href="./assets/dark-theme.css">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./assets/addition.css">
 </head>
 
 <body>
